--- a/caseo_exploration.html
+++ b/caseo_exploration.html
@@ -13,13 +13,13 @@
 <link rel="canonical" href="http://blog.justalfred.com/caseo_exploration.html">
 
         <meta name="author" content="Just Alfred" />
-        <meta name="description" content="Day after day, month after month, I would aimlessly poke through the company kitchen looking for snacks I knew weren’t there. I knew what was behind all the cupboard doors, I knew what was in the fridge, I knew I wouldn’t want anything there. But I’d look ..." />
+        <meta name="description" content="Boundless curiosity and logical models" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Caseo-exploration"/>
         <meta property="og:url" content="http://blog.justalfred.com/caseo_exploration.html"/>
-        <meta property="og:description" content="Day after day, month after month, I would aimlessly poke through the company kitchen looking for snacks I knew weren’t there. I knew what was behind all the cupboard doors, I knew what was in the fridge, I knew I wouldn’t want anything there. But I’d look ..."/>
+        <meta property="og:description" content="Boundless curiosity and logical models"/>
         <meta property="article:published_time" content="2016-02-13" />
             <meta property="article:section" content="humans" />
             <meta property="article:author" content="Just Alfred" />
@@ -31,10 +31,7 @@
             <meta property="twitter:title"
                   content="Caseo-exploration"/>
             <meta property="twitter:description"
-                  content="<p>Day after day, month after month, I would aimlessly poke through the company
-kitchen looking for snacks I knew weren&#8217;t there. I knew what was behind all the cupboard
-doors, I knew what was in the fridge, I knew I wouldn&#8217;t want anything there.
-But I&#8217;d look ...</p>"/>
+                  content="<p>Boundless curiosity and logical&nbsp;models</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="http://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -192,13 +189,13 @@ don&#8217;t want to eat. Pros and&nbsp;cons.</p>
             <li class="list-group-item"><a href="http://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="http://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
