--- a/proust-in-the-park.html
+++ b/proust-in-the-park.html
@@ -244,8 +244,8 @@ I had enough to think about, and before getting lost in Proust&#8217;s world, be
             <li class="list-group-item"><a href="http://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="http://blog.justalfred.com/tag/humans.html">
+                            humans
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
@@ -254,23 +254,23 @@ I had enough to think about, and before getting lost in Proust&#8217;s world, be
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/humans.html">
-                            humans
+                        <a href="http://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
                         <a href="http://blog.justalfred.com/tag/science.html">
-                            Science
-                        </a>
-                    </li>
-                    <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/code.html">
-                            Code
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
                         <a href="http://blog.justalfred.com/tag/info.html">
                             info
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-3">
+                        <a href="http://blog.justalfred.com/tag/code.html">
+                            Code
                         </a>
                     </li>
                 </ul>
