--- a/re-introduction.html
+++ b/re-introduction.html
@@ -152,8 +152,8 @@ I hope you&nbsp;enjoy.</p>
             <li class="list-group-item"><a href="http://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="http://blog.justalfred.com/tag/humans.html">
+                            humans
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
@@ -162,23 +162,23 @@ I hope you&nbsp;enjoy.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/humans.html">
-                            humans
+                        <a href="http://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
                         <a href="http://blog.justalfred.com/tag/science.html">
-                            Science
-                        </a>
-                    </li>
-                    <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/code.html">
-                            Code
+                            science
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
                         <a href="http://blog.justalfred.com/tag/info.html">
                             info
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-3">
+                        <a href="http://blog.justalfred.com/tag/code.html">
+                            Code
                         </a>
                     </li>
                 </ul>
