--- a/index2.html
+++ b/index2.html
@@ -87,6 +87,13 @@ Just Alfred            </a>
         <div class="col-sm-9">
 
             <article>
+                <h2><a href="https://blog.justalfred.com/truth-and-beauty.html">Truth and&nbsp;Beauty</a></h2>
+                <div class="summary"><p>Truth and Beauty. Truth or Beauty. Truth in&nbsp;Beauty.</p>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/truth-and-beauty.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
                 <h2><a href="https://blog.justalfred.com/present.html">Present</a></h2>
                 <div class="summary"><p>Present</p>
                     <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/present.html">more ...</a>
@@ -149,13 +156,6 @@ Just Alfred            </a>
                 </div>
             </article>
             <hr/>
-            <article>
-                <h2><a href="https://blog.justalfred.com/re-introduction.html">Re-Introduction</a></h2>
-                <div class="summary"><p>Welcome again to my old&nbsp;blog.</p>
-                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/re-introduction.html">more ...</a>
-                </div>
-            </article>
-            <hr/>
 
         <ul class="pagination">
                 <li class="prev"><a href="https://blog.justalfred.com/index.html">&laquo;</a>
@@ -191,11 +191,6 @@ Just Alfred            </a>
             <li class="list-group-item"><a href="https://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
-                        </a>
-                    </li>
-                    <li class="list-group-item tag-1">
                         <a href="https://blog.justalfred.com/tag/humans.html">
                             humans
                         </a>
@@ -203,6 +198,11 @@ Just Alfred            </a>
                     <li class="list-group-item tag-1">
                         <a href="https://blog.justalfred.com/tag/music.html">
                             Music
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-1">
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
